fix buttons overlap

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -2877,3 +2877,7 @@ input[type="file"] {
 #steps .dragging {
     opacity: 0.4
 }
+.btn-group-justified>.btn-lg {
+    float: left;
+    min-width: 120px
+}
